infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planner-app
  labels:
    name: planner-app
    app: planner
